plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.0'
    id 'io.spring.dependency-management' version '1.1.4'
    id 'com.diffplug.spotless' version '6.25.0'
    id 'checkstyle'
}

group = 'com.pacific'
version = '1.0.0'
sourceCompatibility = '21'

// Version configuration for dependencies
ext {
    springCloudVersion = '2023.0.0'
    backendCoreVersion = '1.0.0'
    sharedVersion = '1.0.0'
    useLocalDependencies = true // Set to false for production builds
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    // Add S3 repository for published artifacts if needed
    // maven {
    //     url "s3://your-bucket/releases"
    //     // authentication credentials would be configured separately
    // }
}

dependencies {
    // Backend Core (includes Kafka wrapper) - conditional dependency for development vs production
    if (project.file('../backend-core').isDirectory() && useLocalDependencies) {
        // Use local JAR file during development
        implementation fileTree(dir: '../backend-core/build/libs', include: '*.jar')
    } else {
        // Use published Maven artifact for production/CI builds
        implementation "com.pacific:backend-core:${backendCoreVersion}"
    }

    // Shared library (event/command contracts - single source of truth, see ADR-0004)
    if (project.file('../shared').isDirectory() && useLocalDependencies) {
        implementation fileTree(dir: '../shared/build/libs', include: '*.jar')
    } else {
        implementation "com.pacific:shared:${sharedVersion}"
    }

    // Spring Boot
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // Caching dependencies (needed when using file-based backend-core dependency)
    implementation 'com.github.ben-manes.caffeine:caffeine:3.2.1'
    implementation 'com.github.ben-manes.caffeine:jcache:3.2.1'

    // Database
    implementation 'org.postgresql:postgresql'
    implementation 'org.liquibase:liquibase-core'

    // Feign Client
    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'

    // Kafka
    implementation 'org.springframework.kafka:spring-kafka'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Micrometer for metrics
    implementation 'io.micrometer:micrometer-registry-prometheus'

    // OpenAPI/Swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'

    // Testing
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.kafka:spring-kafka-test'
    testImplementation 'com.tngtech.archunit:archunit-junit5:1.0.1'
    testImplementation 'com.h2database:h2'

    // TestContainers for integration testing
    testImplementation 'org.testcontainers:junit-jupiter:1.19.3'
    testImplementation 'org.testcontainers:postgresql:1.19.3'
    testImplementation 'org.testcontainers:kafka:1.19.3'
    testImplementation 'org.testcontainers:testcontainers:1.19.3'
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
    }
}

// Spotless configuration for code formatting
spotless {
    java {
        target fileTree('.') {
            include '**/*.java'
            exclude '**/build/**', '**/generated/**', '**/target/**'
        }
        googleJavaFormat()
        removeUnusedImports()
        trimTrailingWhitespace()
        endWithNewline()
    }

    sql {
        target fileTree('.') {
            include '**/*.sql'
            exclude '**/build/**'
        }
        trimTrailingWhitespace()
        endWithNewline()
    }

    yaml {
        target fileTree('.') {
            include '**/*.yml', '**/*.yaml'
            exclude '**/build/**', '**/target/**', '**/.github/**', '**/application-template.yml', '**/application-env-examples.yml', '**/application-example.yml'
        }
        prettier()
    }

    json {
        target fileTree('.') {
            include '**/*.json'
            exclude '**/build/**', '**/target/**'
        }
        prettier()
    }

    format 'misc', {
        target '*.md', '*.txt'
        trimTrailingWhitespace()
        endWithNewline()
    }
}

// Checkstyle configuration
checkstyle {
    configFile = rootProject.file('config/checkstyle/checkstyle.xml')
    showViolations = true
    maxWarnings = 0
    maxErrors = 0
    ignoreFailures = true
    reportsDir = layout.buildDirectory.dir("reports/checkstyle").get().asFile
}

// Code quality tasks
task codeQuality {
    group = 'verification'
    description = 'Runs all code quality checks (formatting, style, tests)'

    dependsOn 'spotlessCheck', 'checkstyleMain', 'checkstyleTest', 'test'
}

// Pre-commit hook task
task preCommit {
    group = 'verification'
    description = 'Runs pre-commit checks (formatting, style, compilation)'

    dependsOn 'spotlessCheck', 'checkstyleMain', 'compileJava', 'compileTestJava'
}

tasks.named('test') {
    useJUnitPlatform()
}

